[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.40.1",
]
[build-system]
  requires = ["setuptools>=42"]
  build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['expansion1']